--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="user_sex">性别</string>
     <string name="user_signature">签名</string>
     <string name="title_activity_user_setting">UserSetting</string>
+    <string name="title_activity_about_us">AboutUsActivity</string>
 </resources>
