--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,21 +2,19 @@
 
 
     <string name="title_activity_choose_wind">choose_wind</string>
-    <string name="title_activity_post_message">PostMessage</string>
-    <string name="title_activity_edit_post_wind">EditPostWind</string>
+    <string name="title_activity_post_message">纸飞机折叠处</string>
+    <string name="title_activity_edit_post_wind">纸飞机撰写台</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_read_wind_message">ReadWindMessage</string>
-    <string name="title_activity_message_list">MessageList</string>
-
-
+    <string name="title_activity_read_wind_message">纸飞机拆封处</string>
+    <string name="title_activity_message_list">飞机列表</string>
 
 
     <string name="app_name">风零</string>
     <string name="action_settings">Settings</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
 
 
     <string name="title_activity_base">BaseActivity</string>
@@ -53,9 +51,10 @@
     <string name="user_signature">签名</string>
     <string name="title_activity_user_setting">UserSetting</string>
 
-    <string name="title_activity_about_us">AboutUsActivity</string>
+    <string name="title_activity_about_us">关于我们</string>
 
     <string name="title_activity_welcome">WelcomeActivity</string>
+    <string name="title_activity_about_all">关于所有</string>
 
 
 </resources>
